[project]
name = "companydocs-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chroma>=0.2.0",
    "chromadb>=1.5.9",
    "docx2txt>=0.9",
    "fastapi[all]>=0.139.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.7",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "tavily-python>=0.7.26",
    "twelvedata>=1.4.0",
    "unstructured[docx]>=0.23.1",
    "uvicorn[standard]>=0.49.0",
]
